# vscode-telemetry-cleaner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: augment.rs  cli.rs  cursor.rs  database.rs  filesystem.rs  lib.rs  main.rs  process.rs  storage.rs  utils.rs  zen_garden.rs
