[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4", features = ["v4"] }
dirs = "6.0.0"
base64 = "0.22"
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.36", features = ["bundled"] }
default-args = "1.0.0"
clap = { version = "4.5.39", features = ["derive"] }
sysinfo = "0.35"
kill_tree = "0.2"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
color-eyre = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
sudo2 = "0.2"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
